fixed gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,7 +207,7 @@ h1 {
     font-size: 160px;
   }
   #h {
-    min-height: 650px;
+    min-height: 615px;
   }
 }
 
